crates/vize_atelier_dom/src/snapshots/vize_atelier_dom__experimental_tests__compile_experimental_patterned_template_shorthand_rest_as_and_nan.snap
---
source: crates/vize_atelier_dom/src/experimental_tests.rs
expression: full
---
const { toDisplayString: _toDisplayString, createElementVNode: _createElementVNode, openBlock: _openBlock, createElementBlock: _createElementBlock, Fragment: _Fragment, createCommentVNode: _createCommentVNode, renderList: _renderList } = Vue

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("p", null, "NaN")

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList([((__vize_match_0_select_0) => { { const __vize_match_0_select_3 = (() => { if (__vize_match_0_select_0 == null) return null; if (!("kind" in Object(__vize_match_0_select_0))) return null; const __vize_match_0_select_1 = __vize_match_0_select_0["kind"]; if (!(__vize_match_0_select_1 === 'article')) return null; if (!("data" in Object(__vize_match_0_select_0))) return null; const __vize_match_0_select_2 = __vize_match_0_select_0["data"];  { const data = __vize_match_0_select_2; const article = __vize_match_0_select_0; return [0, data, article]; } })(); if (__vize_match_0_select_3 !== null) return __vize_match_0_select_3; } { const __vize_match_0_select_5 = (() => { const __vize_match_0_select_4 = NaN; if (!(__vize_match_0_select_0 === __vize_match_0_select_4 || (__vize_match_0_select_0 !== __vize_match_0_select_0 && __vize_match_0_select_4 !== __vize_match_0_select_4))) return null;  {  return [1]; } })(); if (__vize_match_0_select_5 !== null) return __vize_match_0_select_5; } return [-1]; })((entry))], (__vize_match_0) => {
    return (_openBlock(), _createElementBlock(_Fragment, null, [
      (__vize_match_0[0] === 0)
        ? (_openBlock(true), _createElementBlock(_Fragment, { key: 0 }, _renderList([__vize_match_0], ([, data, article]) => {
          return (_openBlock(), _createElementBlock("article", null, _toDisplayString(article.kind) + ":" + _toDisplayString(data.title), 1 /* TEXT */))
        }), 256 /* UNKEYED_FRAGMENT */))
        : (__vize_match_0[0] === 1)
          ? (_openBlock(), _createElementBlock(_Fragment, { key: 1 }, [
            _hoisted_1
          ], 64 /* STABLE_FRAGMENT */))
        : _createCommentVNode("v-if", true)
    ], 64 /* STABLE_FRAGMENT */))
  }), 256 /* UNKEYED_FRAGMENT */))
}
