crates/vize_atelier_dom/src/snapshots/vize_atelier_dom__experimental_tests__compile_experimental_patterned_template_when_branches.snap
---
source: crates/vize_atelier_dom/src/experimental_tests.rs
expression: full
---
const { createElementVNode: _createElementVNode, openBlock: _openBlock, createElementBlock: _createElementBlock, Fragment: _Fragment, createCommentVNode: _createCommentVNode, renderList: _renderList } = Vue

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("p", null, "Ready")
const _hoisted_2 = /*#__PURE__*/ _createElementVNode("p", null, "Other")

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList([((__vize_match_0_select_0) => { { const __vize_match_0_select_1 = (() => { if (!(__vize_match_0_select_0 === 'ready')) return null;  {  return [0]; } })(); if (__vize_match_0_select_1 !== null) return __vize_match_0_select_1; } { const __vize_match_0_select_2 = (() => {   {  return [1]; } })(); if (__vize_match_0_select_2 !== null) return __vize_match_0_select_2; } return [-1]; })((status))], (__vize_match_0) => {
    return (_openBlock(), _createElementBlock(_Fragment, null, [
      (__vize_match_0[0] === 0)
        ? (_openBlock(), _createElementBlock(_Fragment, { key: 0 }, [
          _hoisted_1
        ], 64 /* STABLE_FRAGMENT */))
        : (__vize_match_0[0] === 1)
          ? (_openBlock(), _createElementBlock(_Fragment, { key: 1 }, [
            _hoisted_2
          ], 64 /* STABLE_FRAGMENT */))
        : _createCommentVNode("v-if", true)
    ], 64 /* STABLE_FRAGMENT */))
  }), 256 /* UNKEYED_FRAGMENT */))
}
